lib/tests/fixtures/compiler/evaluation/invalid_variant_recursive_alias.pp
type Foo = Invalid
type Invalid = Variant[Foo]
notice 0 =~ Invalid
